--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-
+<form id="purchase_form"action="/checkout" method="post">
+  <textarea name="item_to_purchase"></textarea>
+  <button type="submit" name="submit">Submit</button>
+</form>
