--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <form id="purchase_form"action="/checkout" method="post">
-  <textarea name="item_to_purchase"></textarea>
+  <textarea name="item"></textarea>
   <button type="submit" name="submit">Submit</button>
 </form>
