--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <form id="purchase_form"action="/checkout" method="post">
   <textarea name="item"></textarea>
-  <button type="submit" name="submit">Submit</button>
+  <button id="submit" type="submit" name="submit">Submit</button>
 </form>
